Issue is that it is a link, added back white-space: nowrap; and added modifier to text container to display: block;

--- a/static/Scss/style.css
+++ b/static/Scss/style.css
@@ -121,12 +121,14 @@
 }
 .text_container {
   position: absolute;
+  display: block;
   bottom: 0;
   padding: 0.25rem;
   margin: 0 0 0.25rem;
 }
 .text_container h1, .text_container p {
   font-size: 1vw;
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
